[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/sprite-baker/scenes/Frame.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/sprite-baker/scripts/preview.gd" type="Script" id=2]
[ext_resource path="res://addons/sprite-baker/scenes/Scene3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/sprite-baker/scripts/model_3d_view.gd" type="Script" id=4]
[ext_resource path="res://addons/sprite-baker/scripts/sprite_view.gd" type="Script" id=5]


[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.129412, 0.282353, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.211765, 0.227451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.262745, 0.258824, 0.270588, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0.145098, 0.145098, 0.145098, 1 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.223529, 0.278431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.145098, 0.172549, 0.231373, 1 )

[node name="Preview" index="0" instance=ExtResource( 1 )]
anchor_right = 0.201172
margin_right = 287.0
margin_bottom = 569.0
title = "Preview"

[node name="Box" parent="." index="0"]
margin_right = 491.0
margin_bottom = 567.0

[node name="TitleBar" parent="Box" index="0"]
margin_right = 489.0

[node name="Title" parent="Box/TitleBar/TitleBox" index="0"]
margin_right = 420.0
text = "Preview"

[node name="MoveLeft" parent="Box/TitleBar/TitleBox" index="1"]
margin_left = 424.0
margin_right = 440.0

[node name="MoveRight" parent="Box/TitleBar/TitleBox" index="2"]
margin_left = 444.0
margin_right = 460.0

[node name="Minimize" parent="Box/TitleBar/TitleBox" index="3"]
margin_left = 464.0
margin_right = 480.0

[node name="Margin" parent="Box/TitleBar/TitleBox" index="4"]
margin_left = 484.0
margin_right = 489.0

[node name="Panel" parent="Box" index="1"]
margin_right = 489.0
margin_bottom = 565.0

[node name="Content" parent="Box/Panel" index="0"]
margin_right = 484.0
margin_bottom = 530.0

[node name="PreviewBox" type="VSplitContainer" parent="Box/Panel/Content" index="0"]
margin_right = 479.0
margin_bottom = 525.0
rect_min_size = Vector2( 1, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200
script = ExtResource( 2 )
pixel_density_path = NodePath("OptionsScroll/OptionsList/PixelDensityBox/PixelDensity")

[node name="Box" type="VBoxContainer" parent="Box/Panel/Content/PreviewBox" index="0"]
margin_right = 479.0
margin_bottom = 370.0

[node name="TabContainer" type="TabContainer" parent="Box/Panel/Content/PreviewBox/Box" index="0"]
margin_right = 479.0
margin_bottom = 350.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 3
tab_align = 0

[node name="3D View" type="ViewportContainer" parent="Box/Panel/Content/PreviewBox/Box/TabContainer" index="0" groups=[
"3D2SS.ModelData",
"3D2SS.Model",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
stretch = true
script = ExtResource( 4 )

[node name="Viewport3D" type="Viewport" parent="Box/Panel/Content/PreviewBox/Box/TabContainer/3D View" index="0"]
size = Vector2( 471, 314 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Scene3D" parent="Box/Panel/Content/PreviewBox/Box/TabContainer/3D View/Viewport3D" index="0" instance=ExtResource( 3 )]

[node name="Sprite" type="Panel" parent="Box/Panel/Content/PreviewBox/Box/TabContainer" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 1 )

[node name="SpriteView" type="ViewportContainer" parent="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite" index="0" groups=[
"3D2SS.ModelData",
"3D2SS.Model",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_right = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 471, 471 )
rect_pivot_offset = Vector2( 0.5, 0 )
stretch = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport3D" type="Viewport" parent="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite/SpriteView" index="0"]
size = Vector2( 1, 0 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Scene3D" parent="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite/SpriteView/Viewport3D" index="0" instance=ExtResource( 3 )]

[node name="Info" type="HBoxContainer" parent="Box/Panel/Content/PreviewBox/Box" index="1"]
margin_top = 354.0
margin_right = 479.0
margin_bottom = 370.0

[node name="ProgressBar" type="ProgressBar" parent="Box/Panel/Content/PreviewBox/Box/Info" index="0"]
margin_right = 60.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false

[node name="InfoLabel" type="Label" parent="Box/Panel/Content/PreviewBox/Box/Info" index="1"]
margin_left = 64.0
margin_right = 479.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )

[node name="OptionsScroll" type="ScrollContainer" parent="Box/Panel/Content/PreviewBox" index="1"]
margin_top = 382.0
margin_right = 479.0
margin_bottom = 525.0
size_flags_vertical = 3

[node name="OptionsList" type="ItemList" parent="Box/Panel/Content/PreviewBox/OptionsScroll" index="0"]
margin_right = 479.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PixelDensityBox" type="HBoxContainer" parent="Box/Panel/Content/PreviewBox/OptionsScroll/OptionsList" index="1"]
margin_right = 162.0
margin_bottom = 24.0
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelDensityLabel" type="Label" parent="Box/Panel/Content/PreviewBox/OptionsScroll/OptionsList/PixelDensityBox" index="0"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 19.0
text = "Pixel Density"

[node name="PixelDensity" type="SpinBox" parent="Box/Panel/Content/PreviewBox/OptionsScroll/OptionsList/PixelDensityBox" index="1"]
margin_left = 87.0
margin_right = 161.0
margin_bottom = 24.0
size_flags_vertical = 4
min_value = 1.0
max_value = 7680.0
value = 32.0
allow_greater = true

[node name="MinBar" parent="." index="1"]
margin_right = 491.0
margin_bottom = 567.0

[node name="Title" parent="MinBar/TitleBox/Panel" index="0"]
text = "Preview"

[node name="DropLeft" parent="." index="2"]
margin_right = 491.0
margin_bottom = 567.0

[node name="DropRight" parent="." index="3"]
margin_right = 491.0
margin_bottom = 567.0
[connection signal="resized" from="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite" to="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite/SpriteView" method="_on_Sprite_resized"]
[connection signal="pixel_density_changed" from="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite/SpriteView" to="Box/Panel/Content/PreviewBox" method="_on_SpriteView_pixel_density_changed"]
[connection signal="value_changed" from="Box/Panel/Content/PreviewBox/OptionsScroll/OptionsList/PixelDensityBox/PixelDensity" to="Box/Panel/Content/PreviewBox/Box/TabContainer/Sprite/SpriteView" method="_on_PixelDensity_value_changed"]
